// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Roundscreen snapshot renders RoundsScreen correctly 1`] = `
<RCTSafeAreaView
  style={
    Object {
      "backgroundColor": "hsl(0, 0%, 95%)",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "marginBottom": 48,
        "marginLeft": 8,
        "marginRight": 8,
        "marginTop": 48,
      }
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      numberOfLines={1}
      style={
        Object {
          "color": "hsla(277, 100%, 33%, .5)",
          "fontSize": 96,
          "fontWeight": "100",
          "textAlign": "center",
        }
      }
    >
      Rounds
    </Text>
  </View>
</RCTSafeAreaView>
`;

exports[`Roundscreen snapshot renders RoundsScreen when loading 1`] = `
<RCTSafeAreaView
  style={
    Object {
      "backgroundColor": "hsl(0, 0%, 95%)",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "marginBottom": 48,
        "marginLeft": 8,
        "marginRight": 8,
        "marginTop": 48,
      }
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      numberOfLines={1}
      style={
        Object {
          "color": "hsla(277, 100%, 33%, .5)",
          "fontSize": 96,
          "fontWeight": "100",
          "textAlign": "center",
        }
      }
    >
      Rounds
    </Text>
  </View>
  <Text>
    Fetching
  </Text>
</RCTSafeAreaView>
`;
